--- a/css/main.css
+++ b/css/main.css
@@ -165,9 +165,9 @@ a:visited {
 	height: 211px;
 }
 
-@media screen and (min-width: 561px) {
+/*@media screen and (min-width: 561px) {
 	.video {
 		width: 560px; 
 		height: 315px;
 	}
-}
+}*/
