--- a/css/main.css
+++ b/css/main.css
@@ -161,13 +161,13 @@ a:visited {
 }
 
 .video {
-	width: 375px; 
-	height: 211px;
-}
-
-/*@media screen and (min-width: 561px) {
-	.video {
 		width: 560px; 
 		height: 315px;
+}
+
+@media screen and (max-width: 560px) {
+	.video {
+		width: 375px; 
+		height: 211px;
 	}
-}*/
+}
