--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ a:visited {
 	padding-bottom: 50px;
 }
 
-@media screen and (max-device-width: 560px) {
+@media screen and (max-width: 560px) {
 	.container {
 		width: 100vw;
 		margin-left: 0px;
@@ -86,7 +86,7 @@ a:visited {
 	color: #001011;
 }
 
-@media screen and (max-device-width: 560px) {
+@media screen and (max-width: 560px) {
 	.page-heading {
 		font-size: 75px;
 	}
@@ -179,9 +179,9 @@ a:visited {
 		height: 315px;
 }
 
-@media screen and (max-device-width: 560px) {
+@media screen and (max-width: 560px) {
 	.video {
-		width: 375px; 
+		width: 37px; 
 		height: 211px;
 	}
 }
